--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -36,13 +36,15 @@
 
     <Button
         android:id="@+id/button2"
-        android:layout_width="194dp"
-        android:layout_height="90dp"
+        style="@style/Widget.AppCompat.Button.Colored"
+        android:layout_width="265dp"
+        android:layout_height="81dp"
         android:layout_marginBottom="16dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
-        android:text="Log In"
-        android:textSize="30sp"
+        android:backgroundTint="@android:color/holo_green_light"
+        android:text="Submit Registration"
+        android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -56,5 +58,61 @@
         android:textSize="18sp"
         android:textStyle="bold|italic"
         tools:layout_editor_absoluteX="85dp"
-        tools:layout_editor_absoluteY="173dp" />
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/editText2" />
+
+    <Button
+        android:id="@+id/upload_button"
+        android:layout_width="123dp"
+        android:layout_height="95dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginRight="32dp"
+        android:layout_marginTop="8dp"
+        android:text="Set Image"
+        app:layout_constraintBottom_toTopOf="@+id/button2"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/checkBox"
+        app:layout_constraintVertical_bias="0.5" />
+
+    <EditText
+        android:id="@+id/text_input"
+        android:layout_width="148dp"
+        android:layout_height="45dp"
+        android:layout_marginLeft="0dp"
+        android:layout_marginTop="0dp"
+        android:ems="10"
+        android:hint="Name"
+        android:inputType="textPersonName"
+
+        app:layout_constraintLeft_toLeftOf="@+id/checkBox"
+        app:layout_constraintTop_toBottomOf="@+id/checkBox"
+        tools:layout_editor_absoluteX="228dp" />
+
+    <ImageView
+        android:id="@+id/image_container"
+        android:layout_width="216dp"
+        android:layout_height="139dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginTop="8dp"
+        android:scaleType="centerCrop"
+        app:layout_constraintBottom_toTopOf="@+id/button2"
+        app:layout_constraintTop_toBottomOf="@+id/editText3"
+        app:srcCompat="@drawable/neocambiologo"
+        tools:layout_editor_absoluteX="8dp"
+        app:layout_constraintVertical_bias="0.555" />
+
+    <TextView
+        android:id="@+id/overlay_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:text="text"
+        android:textColor="@android:color/background_light"
+        android:textSize="14sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="@+id/image_container"
+        app:layout_constraintLeft_toLeftOf="@+id/image_container"
+        app:layout_constraintRight_toRightOf="@+id/image_container" />
 </android.support.constraint.ConstraintLayout>
