--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,7 +18,9 @@
         android:inputType="textPersonName"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        tools:layout_editor_absoluteY="35dp" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="16dp"
+        app:layout_constraintHorizontal_bias="0.503" />
 
     <EditText
         android:id="@+id/editText2"
@@ -57,9 +59,10 @@
         android:text="Are you 18yo or older?"
         android:textSize="18sp"
         android:textStyle="bold|italic"
-        tools:layout_editor_absoluteX="85dp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/editText2" />
+        android:layout_marginTop="7dp"
+        app:layout_constraintTop_toBottomOf="@+id/editText2"
+        android:layout_marginLeft="0dp"
+        app:layout_constraintLeft_toLeftOf="@+id/editText2" />
 
     <Button
         android:id="@+id/upload_button"
@@ -73,6 +76,29 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/checkBox"
         app:layout_constraintVertical_bias="0.5" />
+
+    <ProgressBar
+        android:id="@+id/progress_bar"
+        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
+        android:layout_width="123dp"
+        android:layout_height="34dp"
+        android:layout_marginLeft="0dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintLeft_toLeftOf="@+id/upload_button"
+        app:layout_constraintTop_toBottomOf="@+id/upload_button" />
+
+    <TextView
+        android:id="@+id/download_url"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:autoLink="web"
+        android:linksClickable="true"
+        android:textSize="12sp"
+        android:text="http://fooooo"
+        android:layout_marginLeft="0dp"
+        app:layout_constraintLeft_toLeftOf="@+id/upload_button"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/upload_button" />
 
     <EditText
         android:id="@+id/text_input"
@@ -96,10 +122,11 @@
         android:layout_marginTop="8dp"
         android:scaleType="centerCrop"
         app:layout_constraintBottom_toTopOf="@+id/button2"
-        app:layout_constraintTop_toBottomOf="@+id/editText3"
+        app:layout_constraintTop_toBottomOf="@+id/text_input"
         app:srcCompat="@drawable/neocambiologo"
-        tools:layout_editor_absoluteX="8dp"
-        app:layout_constraintVertical_bias="0.555" />
+        app:layout_constraintVertical_bias="0.555"
+        app:layout_constraintRight_toLeftOf="@+id/upload_button"
+        android:layout_marginRight="8dp" />
 
     <TextView
         android:id="@+id/overlay_text"
