--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -115,19 +115,27 @@
         app:layout_constraintTop_toBottomOf="@+id/checkBox"
         tools:layout_editor_absoluteX="228dp" />
 
-    <ImageView
+    <FrameLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:id="@+id/image_container"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/text_input"
+        app:layout_constraintRight_toLeftOf="@+id/upload_button"
+        android:layout_marginRight="8dp">
+
+        <ImageView
         android:layout_width="216dp"
         android:layout_height="139dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginTop="8dp"
+            android:layout_marginBottom="0dp"
+            android:layout_marginTop="0dp"
         android:scaleType="centerCrop"
         app:layout_constraintBottom_toTopOf="@+id/button2"
         app:layout_constraintTop_toBottomOf="@+id/text_input"
         app:srcCompat="@drawable/neocambiologo"
         app:layout_constraintVertical_bias="0.555"
         app:layout_constraintRight_toLeftOf="@+id/upload_button"
-        android:layout_marginRight="8dp" />
+            android:layout_marginRight="0dp" />
 
     <TextView
         android:id="@+id/overlay_text"
@@ -140,7 +148,6 @@
         android:textColor="@android:color/background_light"
         android:textSize="14sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="@+id/image_container"
-        app:layout_constraintLeft_toLeftOf="@+id/image_container"
-        app:layout_constraintRight_toRightOf="@+id/image_container" />
+        android:layout_gravity="bottom" />
+    </FrameLayout>
 </android.support.constraint.ConstraintLayout>
